cmake_minimum_required (VERSION 2.6)
project (async_tclient)
set (CMAKE_CXX_COMPILER "g++-4.9")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package (Threads)
find_package(Boost REQUIRED COMPONENTS system)
add_executable(async_tclient main.cpp)
target_link_libraries (async_tclient ${CMAKE_THREAD_LIBS_INIT} ${Boost_SYSTEM_LIBRARY})
